[tool.pytest.ini_options]
pythonpath = ["src"]

[project]
name = "lng-geoenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "openenv>=0.1.13",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "gradio>=4.0.0",
    "openenv-core>=0.2.3",
    "huggingface-hub[cli]>=1.8.0",
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "google-genai>=1.69.0",
]
dev = [
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
server = "server.app:main"
